--- a/bin/index.html
+++ b/bin/index.html
@@ -6,7 +6,8 @@
     <meta name='renderer' content='webkit' />
     <meta name='viewport'
         content='width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no' />
-    <meta name='apple-mobile-web-app-capable' content='yes' />
+    <!-- <meta name='apple-mobile-web-app-capable' content='yes' /> -->
+    <meta name="mobile-web-app-capable" content="yes">
     <meta name='full-screen' content='true' />
     <meta name='x5-fullscreen' content='true' />
     <meta name='360-fullscreen' content='true' />
@@ -14,6 +15,15 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1' />
     <meta http-equiv='expires' content='0' />
     <meta http-equiv='Cache-Control' content='no-siteapp' />
+    <!-- <link rel="preload" href="resources/apes/ui/startImg.jpg" as="image" />
+    <link rel="preload" href="resources/apes/login/loginBtn.png" as="image" /> -->
+    <link rel="preload" href="fileconfig.json" as="fetch" crossorigin="anonymous" />
+    <!-- <link rel="preload" href="atlas/comp.png" as="image" />
+    <link rel="preload" href="resources/apes/ui/hallBg.jpg" as="image" />
+    <link rel="preload" href="resources/apes/operate/createRoom.png" as="image" />
+    <link rel="preload" href="resources/apes/operate/joinRoom.png" as="image" />
+    <link rel="preload" href="resources/apes/dialog/dialogBg.png" as="image" />
+    <link rel="preload" href="resources/apes/ui/table.jpg" as="image" /> -->
 </head>
 
 <body style="margin: 0;background-color: {{backgroundColor}};color: #fff;">
